--- a/color.html
+++ b/color.html
@@ -5,8 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Color</title>
-    <link rel="stylesheet" href="">
+
+    <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" href="./main.css">
+
+    <script type="text/javascript" src="./assets/js/airtable.browser.js" defer></script>
     <script type="text/javascript" src="./assets/js/colorscript.js" defer></script>
+    
 </head>
 <body>
     
