--- a/size.html
+++ b/size.html
@@ -5,10 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sizes</title>
-    <link rel="stylesheet" href="/main.css">
-    <script src="./assets/js/sizescript.js" defer></script>
+
+    <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" href="./main.css">
+
+    <script type="text/javascript" src="./assets/js/airtable.browser.js" defer></script>
+    <script type="text/javascript" src="./assets/js/sizescript.js" defer></script>
 </head>
 <body>
-    
+    <a href="index.html"><div class="return"></div></a>
+    <div class="sizewrapper">
+        <div class="left-wrapper"></div>
+        <div class="right-wrapper"></div>
+    </div>
 </body>
 </html>
