--- a/usefulness.html
+++ b/usefulness.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Usefulness</title>
+
+    <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" href="./main.css">
+
+    <script type="text/javascript" src="./assets/js/airtable.browser.js" defer></script>
+    <script type="text/javascript" src="./assets/js/sizescript.js" defer></script>
 </head>
 <body>
     
