started color page

--- a/color.html
+++ b/color.html
@@ -6,14 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Color</title>
 
-    <link rel="stylesheet" href="./reset.css">
-    <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="./assets/css/reset.css">
+    <link rel="stylesheet" href="./assets/css/color.css">
 
     <script type="text/javascript" src="./assets/js/airtable.browser.js" defer></script>
     <script type="text/javascript" src="./assets/js/colorscript.js" defer></script>
     
 </head>
 <body>
-    
+    <div class="container">
+        <a href="index.html"><div class="return"></div></a>
+        <img id="red" src="./assets/img/red.svg">
+    </div>
 </body>
 </html>
