--- a/size.html
+++ b/size.html
@@ -6,17 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sizes</title>
 
-    <link rel="stylesheet" href="./reset.css">
-    <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="./assets/css/reset.css">
+    <link rel="stylesheet" href="./assets/css/main.css">
 
     <script type="text/javascript" src="./assets/js/airtable.browser.js" defer></script>
     <script type="text/javascript" src="./assets/js/sizescript.js" defer></script>
 </head>
 <body>
     <a href="index.html"><div class="return"></div></a>
+    <div class="dividing-line"></div>
     <div class="sizewrapper">
         <div class="left-wrapper"></div>
         <div class="right-wrapper"></div>
     </div>
+
 </body>
 </html>
