added another typeface

--- a/color.html
+++ b/color.html
@@ -16,7 +16,11 @@
 <body>
     <div class="container">
         <a href="index.html"><div class="return"></div></a>
-        <img id="red" src="./assets/img/red.svg">
+            <img id="red" src="./assets/img/red.svg">
+            <img id="blue" src="./assets/img/blue.svg">
+            <img id="yellow" src="./assets/img/yellow.svg">
+            <img id="white" src="./assets/img/white.svg">
+            <img id="black" src="./assets/img/black.svg">
     </div>
 </body>
 </html>
