--- a/color.html
+++ b/color.html
@@ -16,11 +16,25 @@
 <body>
     <div class="container">
         <a href="index.html"><div class="return"></div></a>
+        <div class="tab"><a href="size.html">SIZE</a> / <a href="usefulness.html">UESEFULNESS</a></div>
+        <div class="image-wrapper">
+
             <img id="red" src="./assets/img/red.svg">
+            <div class="red-text">Red</div>
+
             <img id="blue" src="./assets/img/blue.svg">
+            <div class="blue-text">Blue</div>
+
             <img id="yellow" src="./assets/img/yellow.svg">
+            <div class="yellow-text">Yellow</div>
+
             <img id="white" src="./assets/img/white.svg">
+            <div class="white-text">White</div>
+
             <img id="black" src="./assets/img/black.svg">
+            <div class="black-text">Black</div>
+        </div>
+
     </div>
 </body>
 </html>
