--- a/usefulness.html
+++ b/usefulness.html
@@ -15,6 +15,16 @@
 <body>
     <div class="container">
         <a href="index.html"><div class="return"></div></a>
+        <div class="tab"><a href="size.html">SIZE</a> / <a href="color.html">COLOR</a></div>
+        <div class="main-wrapper">
+            <div class="category">
+                <span id="useful">USEFUL <br><br></span>
+                <span id ="not-useful">NOT USEFUL</span>
+            </div>
+            <div class="usefulness-line"></div>
+            <div class="image-wrapper"></div>
+        </div>
+
 
     </div>
 
