--- a/size.html
+++ b/size.html
@@ -14,6 +14,7 @@
 </head>
 <body>
     <a href="index.html"><div class="return"></div></a>
+    <div class="tab"><a href="color.html">COLOR</a> / <a href="usefulness.html">UESEFULNESS</a></div>
     <div class="dividing-line"></div>
     <div class="sizewrapper">
         <div class="left-wrapper"></div>
