update hover effect of menu tab

--- a/usefulness.html
+++ b/usefulness.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container">
         <a href="index.html"><div class="return"></div></a>
-        <div class="tab"><a href="size.html">SIZE</a> / <a href="color.html">COLOR</a></div>
+        <div class="tab"><span id="size"><a href="size.html">SIZE</a></span> / <span id="color"><a href="color.html">COLOR</a></span></div>
         <div class="main-wrapper">
             <div class="category">
                 <span id="useful">USEFUL <br><br></span>
