--- a/color.html
+++ b/color.html
@@ -16,7 +16,7 @@
 <body>
     <div class="container">
         <a href="index.html"><div class="return"></div></a>
-        <div class="tab"><a href="size.html">SIZE</a> / <a href="usefulness.html">UESEFULNESS</a></div>
+        <div class="tab"><span id="size"><a href="size.html">SIZE</a></span> / <span id="usefulness"><a href="usefulness.html">UESEFULNESS</a></span></div>
         <div class="image-wrapper">
 
             <img id="red" src="./assets/img/red.svg">
